Update to 3 locations and 1 additional event (#545)
* update to 6 events

* update to 6 events

* update to 3 locations

* update tests with accurate assertions for changes

* update tests with accurate assertions for changes

* clean up

* clean up

* add more tests

* improve download service

* use assertAll for tests

* fix README

* fix README

* fix README

* refactor to speed things up

* trim strings

* update rewrite script

* Fix missing newline at end of DownloadService.java

Add a newline at the end of DownloadService.java

* Fix missing newline at end of TrapService.java

Add missing newline at end of TrapService.java

* Improve readability with new TrapRoundScore class

* fix weird line breaks

* fix weird line breaks

* remove unused dependency

* use switch vs instanceOf

* clean up string concatenation

* use virtual threads

* Add comparison script

* use gradle properly

* define virtual threads properly

* overload method to avoid Object

* remove unnecessary annotation

* Fix formatting in application.yml

* use Gatherer

* use modern gradle features

* simplify SpringBootApplication

* use SF7 RestClient

* Increase connection and read timeouts

* use toml file properly

* clean up sonar complaints

* use more Spring Boot 4 features

* add lombok for Slf4j

* utilize lombok

* utilize lombok

* add lombok recipes