@@ -1,63 +1,80 @@
 package trap.report;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.stereotype.Service;
+import trap.client.TrapDataClient;
 
-import java.io.File;
-import java.io.IOException;
-import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.StandardOpenOption;
+import java.time.Duration;
+import java.time.Instant;
+import java.util.Arrays;
 import java.util.Map;
+import java.util.concurrent.Callable;
 import java.util.concurrent.Executors;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.TimeUnit;
 
-import static org.apache.commons.io.FileUtils.copyURLToFile;
-
+@RequiredArgsConstructor
+@Service
+@Slf4j
 public class DownloadService {
-    private static final Logger LOGGER = LoggerFactory.getLogger(DownloadService.class);
+    private final TrapDataClient trapDataClient;
 
-    private static final Map<String, String> FILE_URLS = Map.of(
-            "singles", "https://metabase.sssfonline.com/public/question/8648faf9-42e8-4a9c-b55d-2f251349de7f.csv",
-            "doubles", "https://metabase.sssfonline.com/public/question/5d5a78a5-2356-477f-b1b8-fe6ee11d25b1.csv",
-            "handicap", "https://metabase.sssfonline.com/public/question/69ca55d9-3e18-45bc-b57f-73aeb205ece8.csv",
-            "skeet", "https://metabase.sssfonline.com/public/question/c697d744-0e06-4c3f-a640-fea02f9c9ecd.csv",
-            "clays", "https://metabase.sssfonline.com/public/question/2c6edb1a-a7ee-43c2-8180-ad199a57be55.csv",
-            "fivestand", "https://metabase.sssfonline.com/public/question/3c5aecf2-a9f2-49b2-a11f-36965cb1a964.csv",
-            "doublesskeet", "https://metabase.sssfonline.com/public/question/bdd61066-6e29-4242-b6e9-adf286c2c4ae.csv"
+    private static final Map<String, String> FILE_IDS = Map.of(
+            "singles", "8648faf9-42e8-4a9c-b55d-2f251349de7f",
+            "doubles", "5d5a78a5-2356-477f-b1b8-fe6ee11d25b1",
+            "handicap", "69ca55d9-3e18-45bc-b57f-73aeb205ece8",
+            "skeet", "c697d744-0e06-4c3f-a640-fea02f9c9ecd",
+            "clays", "2c6edb1a-a7ee-43c2-8180-ad199a57be55",
+            "fivestand", "3c5aecf2-a9f2-49b2-a11f-36965cb1a964",
+            "doublesskeet", "bdd61066-6e29-4242-b6e9-adf286c2c4ae"
     );
 
     public void downloadFiles(String[] trapTypes) {
-        var start = System.currentTimeMillis();
-        LOGGER.info("Started downloading files");
+        var start = Instant.now();
+        log.info("Started downloading files");
 
-        ExecutorService executor = Executors.newFixedThreadPool(trapTypes.length);
-        var charset = StandardCharsets.UTF_8;
-        for (var type : trapTypes) {
-            executor.submit(() -> {
-                try {
-                    LOGGER.info("Downloading {} file", type);
-                    copyURLToFile(URI.create(FILE_URLS.get(type)).toURL(), new File(type + ".csv"), 120000, 120000);
-                    LOGGER.info("Finished downloading {} file", type);
+        try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
 
-                    LOGGER.info("Replacing double spaces for {} file", type);
-                    var path = Path.of(type + ".csv");
-                    var content = Files.readString(path, charset).replaceAll(" {2}", " ");
-                    Files.writeString(path, content, charset);
-                    LOGGER.info("Finished replacing double spaces for {} file", type);
-                } catch (IOException e) {
-                    LOGGER.error("Error processing {} file", type, e);
-                }
-            });
-        }
-        executor.shutdown();
-        try {
-            executor.awaitTermination(1, TimeUnit.HOURS);
+            var tasks = Arrays.stream(trapTypes)
+                    .map(type -> (Callable<Void>) () -> {
+                        processFile(type, FILE_IDS.get(type));
+                        return null;
+                    }).toList();
+
+            executor.invokeAll(tasks);
+
         } catch (InterruptedException e) {
-            LOGGER.error("File download interrupted", e);
+            Thread.currentThread().interrupt(); // Restore interrupted status
+            log.error("Download process was interrupted", e);
+            throw new RuntimeException("Download interrupted", e);
         }
-        LOGGER.info("Files downloaded in {} ms", System.currentTimeMillis() - start);
+
+        var duration = Duration.between(start, Instant.now());
+        log.info("Files downloaded in {} ms", duration.toMillis());
+    }
+
+    private void processFile(String type, String fileId) {
+        try {
+            log.info("Downloading {} file", type);
+            String content = trapDataClient.getFileContent(fileId);
+
+            if (content == null) {
+                log.error("Failed to download {}: Received null content", type);
+                return;
+            }
+
+            log.info("Finished downloading {} file", type);
+
+            String cleanContent = content.replaceAll(" {2}", " ");
+            var path = Path.of(type + ".csv");
+            Files.writeString(path, cleanContent, StandardCharsets.UTF_8, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+
+            log.info("Finished replacing double spaces for {} file", type);
+        } catch (Exception e) {
+            log.error("Error processing {} file", type, e);
+        }
     }
 }
